--- a/004-ft-interface/static-frontend/saadtahir/src/App.css
+++ b/004-ft-interface/static-frontend/saadtahir/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.button {
+  background-color: #5c15e2;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 4px 2px;
+  cursor: pointer;
+}
