Add separate views  for owner and customer

--- a/004-ft-interface/static-frontend/minahil-imtiaz/ft-caller-static-page/view/admin.html
+++ b/004-ft-interface/static-frontend/minahil-imtiaz/ft-caller-static-page/view/admin.html
@@ -2,9 +2,9 @@
 
     <head>
         <meta charset="UTF-8" />
-        <title>PRODUCT STORE</title>
+        <title>Admin Page</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script src="../dist/bundle.js"></script>
+        <script src="../dist/admin.bundle.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" />
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
@@ -50,7 +50,9 @@
         <div>
             <form id="balance-inquiry-form">
                 <h4>Balance Inquiry</h4>
-                Check your balance <input type="submit" value="Check" />
+                Inquiry Address
+                <input name="balanceInquiryAddress" type="text" id="balance-inquiry-address" />
+                <input type="submit" value="Check" />
                 <br>
                 Your balance:
                 <output id="balance-output"></output>
@@ -71,16 +73,6 @@
             </form>
         </div>
         <br />
-        <div>
-            <form id="transfer-tokens">
-                <h4>Transfer Tokens</h4>
-                Recipient Address <input name="recipientAddress" type="text" id="token-recipient-address" />
-                Amount <input name="amount" type="number" id="transfer-amount" />
-                <input type="submit" value="Transfer" />
-                <br>
-                Output: <output id="transfer-token-output"></output>
-            </form>
-        </div> <br />
         <div>
             <form id="destroy-tokens">
                 <h4>Destroy Tokens</h4>
@@ -106,27 +98,6 @@
         </div>
         <h1>Product Store</h1>
         <div>
-            <form id="get-product-price">
-                <h4>Check product price</h4>
-                Product Name <input name="productName" type="text" id="product-name" />
-                <input type="submit" value="Submit" />
-                <br>
-                Output: <output id="price-output"></output>
-            </form>
-        </div>
-        <br />
-        <br />
-        <div>
-            <form id="get-bonus-points-count">
-                <h4>Check bonus point</h4>
-                Want to check your reward points? <input type="submit" value="Yes" />
-                <br>
-                Output: <output id="bonus-point-output"></output>
-            </form>
-        </div>
-        <br />
-        <br />
-        <div>
             <form id="delete-product">
                 <h4>Delete Product</h4>
                 Product Name <input name="productName" type="text" id="delete-product-name" />
@@ -146,38 +117,6 @@
                 <input type="submit" value="Submit" />
                 <br>
                 Output: <output id="add-product-output"></output>
-            </form>
-        </div> <br /> <br />
-        <div>
-            <form id="buy-product">
-                <h4>Buy Product</h4>
-                Product Name <input name="productName" type="text" id="requested-product-name" />
-                <input type="submit" value="Submit" />
-                <br>
-                Output: <output id="purchase-output"></output>
-            </form>
-        </div>
-        <br />
-        <br />
-        <div>
-            <form id="transfer-reward-tokens">
-                <h4>Transfer Reward</h4>
-                Amount <input name="amount" type="text" id="reward-transfer-amount" />
-                Friend's Address <input name="recipientAddress" type="text" id="reward-recipient-address" />
-                <input type="submit" value="Submit" />
-                <br>
-                Output: <output id="transfer-reward-output"></output>
-            </form>
-        </div>
-        <br />
-        <br />
-        <div>
-            <form id="redeem-reward-tokens">
-                <h4>Redeem Reward</h4>
-                Amount <input name="amount" type="text" id="redeem-amount" />
-                <input type="submit" value="Redeem" />
-                <br>
-                Output: <output id="redeem-reward-output"></output>
             </form>
         </div>
     </body>
