Updated the frontend and contract

--- a/005-nft-1/nft-projects/saadtahir/Frontend/src/Home/Home.css
+++ b/005-nft-1/nft-projects/saadtahir/Frontend/src/Home/Home.css
@@ -8,3 +8,25 @@
   display: inline-block;
   font-size: 16px;
 }
+
+.sell {
+  background-color: #a0b430; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.buy {
+  background-color: #3058b4; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
