--- a/005-nft-1/nft-projects/saadtahir/Frontend/src/Velocity/Velocity.css
+++ b/005-nft-1/nft-projects/saadtahir/Frontend/src/Velocity/Velocity.css
@@ -1,5 +1,5 @@
-.get-token-info {
-  background-color: #af4c4c; /* Green */
+.submit-button {
+  background-color: #634caf; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -9,13 +9,7 @@
   font-size: 16px;
 }
 
-.claim-button {
-  background-color: #634caf; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
+.token-id-list {
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  list-style-position: inside;
 }
