--- a/005-nft-1/nft-projects/huzaifa/training-app/src/components/NavBar/NavBar.scss
+++ b/005-nft-1/nft-projects/huzaifa/training-app/src/components/NavBar/NavBar.scss
@@ -3,10 +3,14 @@
 .nav-bar-container {
   width: 100vw;
   height: 64px;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 2rem;
+  background: white;
 
   .app-logo {
     width: 35px;
