--- a/005-nft-1/nft-projects/huzaifa/training-app/src/components/action-card/ActionCard.scss
+++ b/005-nft-1/nft-projects/huzaifa/training-app/src/components/action-card/ActionCard.scss
@@ -1,8 +1,9 @@
 @import '../../styles/Colors.scss';
 
 .card-container {
-  width: 24rem;
+  width: 26rem;
   padding: 0 2rem 2rem 2rem;
+  margin: 0 3rem;
   box-shadow: 2px 2px 6px #888888;
   border-radius: 1.25rem;
   display: flex;
@@ -17,7 +18,7 @@
   }
 
   .card-image {
-    width: 24rem;
+    width: 26rem;
     height: 18rem;
     object-fit: cover;
     border-radius: 1.25rem 1.25rem 0 0;
@@ -35,6 +36,7 @@
     margin: 0 0 1rem 0;
     font-family: 'Montserrat';
     color: $colorRegularText;
+    text-align: center;
     cursor: default;
   }
 }
