--- a/005-nft-1/nft-projects/huzaifa/training-app/src/pages/buying-page/BuyingPage.scss
+++ b/005-nft-1/nft-projects/huzaifa/training-app/src/pages/buying-page/BuyingPage.scss
@@ -1,21 +1,22 @@
 @import '../../styles/Colors.scss';
 
-.profile-outer-container {
+.buy-outer-container {
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
-  .profile-container {
+  background-image: url('../../images/plainBackground.jpg');
+
+  .buy-container {
     width: 100vw;
     height: 100vh;
     padding: 2rem 4rem;
     overflow: hidden;
-    background-image: url('../../images/plainBackground.jpg');
     background-size: cover;
     display: flex;
     align-items: center;
     justify-content: space-around;
 
-    .profile-info-container {
+    .buy-info-container {
       flex: 1.5;
       padding: 1rem 2rem;
       margin-right: 4rem;
@@ -26,17 +27,32 @@
       align-items: center;
       background: white;
 
-      .info-heading {
+      .buy-heading {
         margin: 0 0 2rem 0;
         font-family: 'Montserrat';
         color: $colorFocusText;
         cursor: default;
       }
+
+      .buy-paragraph {
+        margin: 0;
+        font-family: 'Montserrat';
+        color: $colorRegularText;
+        font-size: 1.5rem;
+        text-align: center;
+        cursor: default;
+      }
+
+      .buy-button {
+        margin-top: 1rem;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+      }
     }
 
-    .info-tokens-container {
+    .buy-tokens-container {
       flex: 2.5;
-      width: 26rem;
       height: 80%;
       padding: 1rem 2rem;
       box-shadow: 2px 2px 6px #888888;
@@ -46,14 +62,14 @@
       align-items: center;
       background: white;
 
-      .info-tokens-heading {
+      .buy-tokens-heading {
         margin: 0 0 2rem 0;
         font-family: 'Montserrat';
         color: $colorFocusText;
         cursor: default;
       }
 
-      .info-token-cards-container {
+      .buy-token-cards-container {
         width: 100%;
         height: 100%;
         overflow-y: scroll;
