Add backend functionality of Buy, Sell, and Claim

--- a/005-nft-1/nft-projects/huzaifa/training-app/src/components/table/Table.scss
+++ b/005-nft-1/nft-projects/huzaifa/training-app/src/components/table/Table.scss
@@ -9,6 +9,7 @@
     margin: 0.5rem 0;
     padding: 0 1rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     transition: all 0.3s;
 
