--- a/005-nft-1/nft-projects/huzaifa/training-app/src/pages/buying-page/BuyingPage.scss
+++ b/005-nft-1/nft-projects/huzaifa/training-app/src/pages/buying-page/BuyingPage.scss
@@ -1,4 +1,5 @@
 @import '../../styles/Colors.scss';
+@import '~antd/dist/antd.css';
 
 .buy-outer-container {
   display: flex;
@@ -74,8 +75,17 @@
         height: 100%;
         overflow-y: scroll;
         display: flex;
-        justify-content: space-between;
         flex-wrap: wrap;
+      }
+
+      .buy-token-cards-container-message {
+        font-family: 'Montserrat';
+        color: $colorRegularText;
+        margin: auto;
+      }
+
+      .pagination {
+        margin-top: 1rem;
       }
     }
   }
