--- a/005-nft-1/nft-projects/huzaifa/training-app/src/components/token-card/TokenCard.scss
+++ b/005-nft-1/nft-projects/huzaifa/training-app/src/components/token-card/TokenCard.scss
@@ -2,6 +2,7 @@
 
 .token-card {
   width: 10rem;
+  height: 12rem;
   padding: 0 0.5rem 0.5rem 0.5rem;
   margin: 1rem 2rem;
   box-shadow: 2px 2px 6px #888888;
@@ -35,7 +36,7 @@
 
   .token-image {
     width: 10rem;
-    height: 8rem;
+    height: 9rem;
     background: transparent url('../../images/spinner.gif') center no-repeat;
     background-size: cover;
     object-fit: cover;
@@ -47,5 +48,6 @@
     font-family: 'Montserrat';
     font-size: 1.1rem;
     color: $colorFocusText;
+    margin: auto;
   }
 }
