--- a/005-nft-1/nft-projects/huzaifa/training-app/src/pages/profilePage/ProfilePage.scss
+++ b/005-nft-1/nft-projects/huzaifa/training-app/src/pages/profilePage/ProfilePage.scss
@@ -34,7 +34,7 @@
       }
     }
 
-    .info-tokens-container {
+    .profile-tokens-container {
       flex: 2.5;
       width: 26rem;
       height: 80%;
@@ -46,20 +46,25 @@
       align-items: center;
       background: white;
 
-      .info-tokens-heading {
+      .profile-tokens-heading {
         margin: 0 0 2rem 0;
         font-family: 'Montserrat';
         color: $colorFocusText;
         cursor: default;
       }
 
-      .info-token-cards-container {
+      .profile-token-cards-container {
         width: 100%;
         height: 100%;
         overflow-y: scroll;
         display: flex;
-        justify-content: space-between;
         flex-wrap: wrap;
+      }
+
+      .profile-token-cards-container-message {
+        font-family: 'Montserrat';
+        color: $colorRegularText;
+        margin: auto;
       }
     }
   }
