--- a/005-nft-1/nft-projects/huzaifa/training-app/src/pages/homePage/HomePage.scss
+++ b/005-nft-1/nft-projects/huzaifa/training-app/src/pages/homePage/HomePage.scss
@@ -17,6 +17,8 @@
     .profile-container {
       padding: 8rem 16rem;
       margin: 0 4rem;
+      width: 100%;
+      height: 76%;
       border-radius: 1.25rem;
       background: url('../../images/plainBackground.jpg');
       background-size: cover;
@@ -25,30 +27,36 @@
       justify-content: center;
       align-items: center;
 
-      .profile-container-heading {
-        margin: 0 0 2rem 0;
-        font-family: 'Montserrat';
-        font-size: 8rem;
-        text-align: center;
-        color: rgb(240, 240, 240);
-        cursor: default;
+      .profile-container-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-        span {
-          color: $colorFocusText;
+        .profile-container-heading {
+          margin: 0 0 2rem 0;
+          font-family: 'Montserrat';
+          font-size: 8rem;
+          text-align: center;
+          color: rgb(240, 240, 240);
+          cursor: default;
+
+          span {
+            color: $colorFocusText;
+          }
         }
-      }
 
-      .profile-container-text {
-        margin: 0 0 4rem 0;
-        font-family: 'Montserrat';
-        font-size: 1.5rem;
-        text-align: center;
-        color: $colorRegularText;
-        cursor: default;
-      }
+        .profile-container-text {
+          margin: 0 0 4rem 0;
+          font-family: 'Montserrat';
+          font-size: 1.5rem;
+          text-align: center;
+          color: $colorRegularText;
+          cursor: default;
+        }
 
-      .profile-container-button {
-        margin: 0;
+        .profile-container-button {
+          margin: 0;
+        }
       }
     }
   }
